# strata-benchmarks

./: Cargo.toml  benchmark-results-with-counters.txt
benches/: branch.rs  event.rs  fill_level.rs  json.rs  kv.rs  redis_compare.rs  scaling.rs  state.rs  vector.rs
benches/harness/: mod.rs  scaling.rs
data/: branches.jsonl  dirty.jsonl  events.jsonl  json_docs.jsonl  kv.jsonl  state.jsonl  vectors.jsonl
docs/: benchmark-observations.md
tests/: branch_api.rs  database.rs  database_builder.rs  dataset_dirty.rs  dataset_state.rs  json.rs  kv.rs  session.rs  state.rs
tests/common/: mod.rs
