[package]
name = "strata-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Black-box tests and performance benchmarks for StrataDB"
license = "Apache-2.0"

[dependencies]
stratadb = { git = "https://github.com/strata-systems/strata-core.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "state"
harness = false

[[bench]]
name = "event"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "branch"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "redis_compare"
harness = false

[[bench]]
name = "fill_level"
harness = false
